--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -32,7 +32,7 @@
                         <p>By Item Content</p>
 
                         <div class="linngrid" id="pwpByItemGrid"
-                          style="width: 100%; min-height: 100px; outline: 0px; position: relative;"></div>
+                          style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
 
                         <p>Paid: {{ orderCurrency }}{{ paid }}</p>
                         <p>Outstanding: {{ orderCurrency }}{{ paid }} </p>
