--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -4,6 +4,10 @@
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.editors.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.formatters.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.dataview.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/plugins/slick.cellrangedecorator.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/plugins/slick.cellrangeselector.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/plugins/slick.cellselectionmodel.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/plugins/slick.resizer.js"></script>
 
   <section>
     <table class="generic-module-layout tabset" lw-tst="tab_set" modern-layout="" tab-loaded="tabLoaded">
