--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -38,12 +38,13 @@
                         <div class="linngrid" id="pwpByItemGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
 
-                        <p>Paid: {{ orderCurrency }} {{ paid }}</p>
-                        <p>Outstanding: {{ orderCurrency }} {{ outstanding }} </p>
-                        <p>Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </p>
-                        <p>Your balance is: {{ orderCurrency }} {{ paid }} </p>
-
-                        <button class="btn btn-primary" ng-click="payByItems()">Pay</button>
+                        <div style="float: right">
+                          <p>Paid: {{ orderCurrency }} {{ paid }}</p>
+                          <p>Outstanding: {{ orderCurrency }} {{ outstanding }} </p>
+                          <p>Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </p>
+                          <p>Your balance is: {{ orderCurrency }} {{ paid }} </p>
+                          <button class="btn btn-primary" ng-click="payByItems()">Pay</button>
+                        </div>
                       </td>
                     </tr>
                   </tbody>
