--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -38,13 +38,21 @@
                         <div class="linngrid" id="pwpByItemGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
 
-                        <div style="float: right">
-                          <p>Paid: {{ orderCurrency }} {{ paid }}</p>
-                          <p>Outstanding: {{ orderCurrency }} {{ outstanding }} </p>
-                          <p>Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </p>
-                          <p>Your balance is: {{ orderCurrency }} {{ paid }} </p>
-                          <button class="btn btn-primary" ng-click="payByItems()">Pay</button>
-                        </div>
+                        <table align="right">
+                          <tr>
+                            <p>Paid: {{ orderCurrency }} {{ paid }}</p>
+                          </tr>
+                          <tr>
+                            <p>Outstanding: {{ orderCurrency }} {{ outstanding }} </p>
+                          </tr>
+                          <tr>
+                            <p>Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </p>
+                          </tr>
+                          <tr>
+                            <p>Your balance is: {{ orderCurrency }} {{ paid }} </p>
+                          </tr>
+                          <tr><button class="btn btn-primary" ng-click="payByItems()">Pay</button></tr>
+                        </table>
                       </td>
                     </tr>
                   </tbody>
@@ -78,8 +86,6 @@
       </lw-tab>
     </lw-tab-set>
   </section>
-
-
 
   <h2>Payment History</h2>
   <div class="linngrid">
