--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -40,18 +40,18 @@
 
                         <table align="right">
                           <tr>
-                            <p style="float: right">Paid: {{ orderCurrency }} {{ paid }}</p>
+                            <p>Paid: {{ orderCurrency }} {{ paid }}</p>
                           </tr>
                           <tr>
-                            <p style="float: right">Outstanding: {{ orderCurrency }} {{ outstanding }} </p>
+                            <p>Outstanding: {{ orderCurrency }} {{ outstanding }} </p>
                           </tr>
                           <tr>
-                            <p style="float: right">Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </p>
+                            <p>Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </p>
                           </tr>
                           <tr>
-                            <p style="float: right">Your balance is: {{ orderCurrency }} {{ paid }} </p>
+                            <p>Your balance is: {{ orderCurrency }} {{ paid }} </p>
                           </tr>
-                          <tr style="float: right"><button class="btn btn-primary" ng-click="payByItems()">Pay</button></tr>
+                          <tr><button class="btn btn-primary" ng-click="payByItems()">Pay</button></tr>
                         </table>
                       </td>
                     </tr>
@@ -86,6 +86,7 @@
       </lw-tab>
     </lw-tab-set>
   </section>
+
 
   <h2>Payment History</h2>
   <div class="linngrid">
