--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -35,7 +35,7 @@
                       <td class="flexible-content">
                         <p>By Item Content</p>
 
-                        <div ng-if="grid" class="linngrid" id="pwpByItemGrid"
+                        <div class="linngrid" id="pwpByItemGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
 
                         <table>
@@ -73,15 +73,13 @@
                             <p>Outstanding: {{ orderCurrency }} {{ outstanding }} </p>
                           </tr>
                           <tr>
-                            <h4>Amount To Pay: {{ orderCurrency }}</h4><input type="number" ng-model="amountToPay"/>
+                            <h5>Amount To Pay: {{ orderCurrency }}</h5><input type="number" ng-model="amountToPay"/>
                           </tr>
                           <tr>
                             <p>Your balance is: {{ orderCurrency }} {{ paid }} </p>
                           </tr>
-                          <tr><button class="btn btn-primary" ng-click="payByItems()">Pay</button></tr>
+                          <tr><button class="btn btn-primary" ng-click="payByAmount()">Pay</button></tr>
                         </table>
-
-                        <button class="btn btn-primary" ng-click="payByAmount()">Pay</button>
                       </td>
                     </tr>
                   </tbody>
@@ -106,7 +104,7 @@
 
   <div>
     <h2>Payment History</h2>
-    <h3>No payments found/h3>
+    <h5>No payments found/h5>
   </div>
   
 
