--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -40,16 +40,16 @@
 
                         <table>
                           <tr>
-                            <p>Paid: {{ orderCurrency }} {{ paid }}</p>
+                            <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
                           </tr>
                           <tr>
-                            <p>Outstanding: {{ orderCurrency }} {{ outstanding }} </p>
+                            <h5>Outstanding: {{ orderCurrency }} {{ outstanding }} </h5>
                           </tr>
                           <tr>
                             <h4>Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </h4>
                           </tr>
                           <tr>
-                            <p>Your balance is: {{ orderCurrency }} {{ paid }} </p>
+                          <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
                           </tr>
                           <tr><button class="btn btn-primary" ng-click="payByItems()">Pay</button></tr>
                         </table>
@@ -64,19 +64,20 @@
                     <tr>
                       <td class="flexible-content">
                         <p>By Amount Content</p>
-                        <div class="linngrid" id="pwpByItemGrid"></div>
+                        <div class="linngrid" id="pwpByItemGrid"
+                          style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
                         <table>
                           <tr>
-                            <p>Paid: {{ orderCurrency }} {{ paid }}</p>
+                            <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
                           </tr>
                           <tr>
-                            <p>Outstanding: {{ orderCurrency }} {{ outstanding }} </p>
+                            <h5>Outstanding: {{ orderCurrency }} {{ outstanding }} </h5>
                           </tr>
                           <tr>
-                            <h5>Amount To Pay: {{ orderCurrency }}</h5><input type="number" ng-model="amountToPay"/>
+                            <row><h4>Amount To Pay: {{ orderCurrency }} </h4><input type="number" ng-model="amountToPay"/></row>
                           </tr>
                           <tr>
-                            <p>Your balance is: {{ orderCurrency }} {{ paid }} </p>
+                            <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
                           </tr>
                           <tr><button class="btn btn-primary" ng-click="payByAmount()">Pay</button></tr>
                         </table>
@@ -104,7 +105,7 @@
 
   <div>
     <h2>Payment History</h2>
-    <h5>No payments found/h5>
+    <h5>No payments found</h5>
   </div>
   
 
