--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -38,7 +38,15 @@
                         <div class="linngrid" id="pwpByItemGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
 
-                        <table>
+                          <ol class="totals">
+                            <span><h5>Paid: {{ orderCurrency }} {{ paid }} </h5></span>
+                            <span><h5>Outstanding: {{ orderCurrency }} {{ outstanding }} </h5></span>
+                            <span><h4>Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </h4></span>
+                            <span><h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5></span>
+                            <span><button class="btn btn-primary" ng-click="payByItems()">Pay</button></span>
+                          </ol>
+
+                        <!-- <table>
                           <tr>
                             <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
                           </tr>
@@ -52,7 +60,7 @@
                           <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
                           </tr>
                           <tr><button class="btn btn-primary" ng-click="payByItems()">Pay</button></tr>
-                        </table>
+                        </table> -->
                       </td>
                     </tr>
                   </tbody>
