--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -63,7 +63,7 @@
                     <tr>
                       <td class="flexible-content">
                         <p>By Amount Content</p>
-                        <div class="linngrid" id="pwpByItemGrid"
+                        <div class="linngrid" id="byAmountGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
                         <table>
                           <tr>
