--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,4 +1,9 @@
 <div ng-controller="PayWithPayoneerView">
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/firebugx.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/jquery.event.drag-2.3.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/jquery.event.drop-2.3.0.min.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.core.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.grid.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.editors.js"></script>
@@ -8,6 +13,8 @@
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/plugins/slick.cellrangeselector.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/plugins/slick.cellselectionmodel.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/plugins/slick.resizer.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/plugins/slick.cellselectionmodel.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/plugins/slick.cellselectionmodel.min.js"></script>
 
   <section>
     <table class="generic-module-layout tabset" lw-tst="tab_set" modern-layout="" tab-loaded="tabLoaded">
