--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -45,19 +45,21 @@
                         <div class="linngrid" id="pwpByItemGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
                         <table>
-                          <tr style="text-align: right;">
-                            <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
+                          <tr>
+                            <td align="right">
+                              <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
+                            </td>
                           </tr>
-                          <tr style="text-align: right;">
+                          <tr>
                             <h5>Outstanding: {{ orderCurrency }} {{ outstanding }} </h5>
                           </tr>
-                          <tr style="text-align: right;">
+                          <tr>
                             <h4>Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </h4>
                           </tr>
-                          <tr style="text-align: right;">
+                          <tr>
                           <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
                           </tr>
-                          <tr style="align-content: flex-end;"><button class="btn btn-primary" ng-click="payByItems()">Pay</button></tr>
+                          <tr><button class="btn btn-primary" ng-click="payByItems()">Pay</button></tr>
                         </table>
                       </td>
                     </tr>
