--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -44,22 +44,43 @@
 
                         <div class="linngrid" id="pwpByItemGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
+                          
                         <table>
                           <tr>
-                            <td align="right">
-                              <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
+                            <td>
+                              <div style="display: flex; justify-content: flex-end">
+                                <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
+                              </div>
                             </td>
                           </tr>
                           <tr>
-                            <h5>Outstanding: {{ orderCurrency }} {{ outstanding }} </h5>
+                            <td>
+                              <div style="display: flex; justify-content: flex-end">
+                                <h5>Outstanding: {{ orderCurrency }} {{ outstanding }} </h5>
+                              </div>
+                            </td>
                           </tr>
                           <tr>
-                            <h4>Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </h4>
+                            <td>
+                              <div style="display: flex; justify-content: flex-end">
+                                <h4>Selected To Pay: {{ orderCurrency }} {{ selectedToPay }} </h4>
+                              </div>
+                            </td>
                           </tr>
                           <tr>
-                          <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
+                            <td>
+                              <div style="display: flex; justify-content: flex-end">
+                                <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
+                              </div>
+                            </td>
                           </tr>
-                          <tr><button class="btn btn-primary" ng-click="payByItems()">Pay</button></tr>
+                          <tr>
+                            <td>
+                              <div style="display: flex; justify-content: flex-end">
+                                <button class="btn btn-primary" ng-click="payByItems()">Pay</button>
+                              </div>
+                            </td>
+                          </tr>
                         </table>
                       </td>
                     </tr>
