--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -43,12 +43,15 @@
                         <p>By Item Content</p>
 
                         <div class="linngrid" id="pwpByItemGrid"
-                          style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
+                          style="width: 600px; height: 240px; outline: 0px; position: relative;"></div>
                           
-                        <table>
+                        <table style="width: 100%;">
                           <tr>
+                            <div style="display: block; width: 100%; justify-content: flex-end">
+                              <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
+                            </div>
                             <td>
-                              <div style="display: flex; justify-content: flex-end">
+                              <div style="display: inline-block; width: 100%; justify-content: flex-end; text-align: right;">
                                 <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
                               </div>
                             </td>
