--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -85,6 +85,41 @@
                             </td>
                           </tr>
                         </table>
+                        <style type="text/css">
+                          .tg  {border-collapse:collapse;border-spacing:0;}
+                          .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+                            overflow:hidden;padding:10px 5px;word-break:normal;}
+                          .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+                            font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+                          .tg .tg-baqh{text-align:center;vertical-align:top}
+                          .tg .tg-lqy6{text-align:right;vertical-align:top}
+                          .tg .tg-0lax{text-align:left;vertical-align:top}
+                          </style>
+                          <table class="tg" style="undefined;table-layout: fixed; width: 357px">
+                          <colgroup>
+                          <col style="width: 256px">
+                          <col style="width: 101px">
+                          </colgroup>
+                            <tr>
+                              <th class="tg-lqy6">1</th>
+                              <th class="tg-baqh"></th>
+                            </tr>
+                            <tr>
+                              <td class="tg-lqy6">2</td>
+                              <td class="tg-baqh"></td>
+                            </tr>
+                            <tr>
+                              <td class="tg-lqy6">3</td>
+                              <td class="tg-baqh"></td>
+                            </tr>
+                            <tr>
+                              <td class="tg-baqh" colspan="2"></td>
+                            </tr>
+                            <tr>
+                              <td class="tg-0lax"></td>
+                              <td class="tg-baqh"><br>Pay</td>
+                            </tr>
+                          </table>
                       </td>
                     </tr>
                   </tbody>
