--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -43,7 +43,7 @@
                         <p>By Item Content</p>
 
                         <div class="linngrid" id="pwpByItemGrid"
-                          style="width: 600px; height: 240px; outline: 0px; position: relative;"></div>
+                          style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
                           
                         <table style="width: 100%;">
                           <tr>
