--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -102,18 +102,18 @@
                           </colgroup>
                             <tr>
                               <th class="tg-lqy6"><h5>Paid: </h5></th>
-                              <th class="tg-baqh">{{ orderCurrency }} {{ paid }}</th>
+                              <th class="tg-baqh"><h5>{{ orderCurrency }} {{ paid }}</h5></th>
                             </tr>
                             <tr>
                               <td class="tg-lqy6"><h5>Outstanding: </h5></td>
-                              <td class="tg-baqh">{{ orderCurrency }} {{ outstanding }}</td>
+                              <td class="tg-baqh"><h5>{{ orderCurrency }} {{ outstanding }}</h5></td>
                             </tr>
                             <tr>
                               <td class="tg-lqy6"><h4>Selected To Pay: </h4></td>
-                              <td class="tg-baqh">{{ orderCurrency }} {{ selectedToPay }}</td>
+                              <td class="tg-baqh"><h4>{{ orderCurrency }} {{ selectedToPay }}</h4></td>
                             </tr>
                             <tr>
-                              <td class="tg-baqh" colspan="2"><h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5></td>
+                              <td class="tg-lqy6" colspan="2"><h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5></td>
                             </tr>
                             <tr>
                               <td class="tg-0lax"></td>
