--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -45,7 +45,7 @@
                         <div class="linngrid" id="pwpByItemGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
                           
-                        <table style="width: 80%; margin-right: 20px;">
+                        <table style="width: 96%;">
                           <tr>
                             <td>
                               <div style="display: inline-block; width: 100%; justify-content: flex-end; text-align: right;">
