--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -95,7 +95,46 @@
                         <p>By Amount Content</p>
                         <div class="linngrid" id="byAmountGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
-                        <table>
+
+                          <table style="width: 96%;">
+                            <tr>
+                              <td>
+                                <div style="display: inline-block; width: 100%; justify-content: flex-end; text-align: right;">
+                                  <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
+                                </div>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <div style="display: flex; justify-content: flex-end">
+                                  <h5>Outstanding: {{ orderCurrency }} {{ outstanding }} </h5>
+                                </div>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <div style="display: flex; justify-content: flex-end">
+                                  <h4>Amount To Pay: {{ orderCurrency }} </h4><input type="number" ng-model="amountToPay"/>
+                                </div>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <div style="display: flex; justify-content: flex-end">
+                                  <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
+                                </div>
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>
+                                <div style="display: flex; justify-content: flex-end">
+                                  <button class="btn btn-primary" ng-click="payByAmount()">Pay</button>
+                                </div>
+                              </td>
+                            </tr>
+                          </table>
+
+                        <!-- <table>
                           <tr>
                             <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
                           </tr>
@@ -109,7 +148,7 @@
                             <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
                           </tr>
                           <tr><button class="btn btn-primary" ng-click="payByAmount()">Pay</button></tr>
-                        </table>
+                        </table> -->
                       </td>
                     </tr>
                   </tbody>
