--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -45,7 +45,7 @@
                         <div class="linngrid" id="pwpByItemGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
                           
-                        <table style="width: 96%;">
+                        <table style="width: 98%;">
                           <tr>
                             <td>
                               <div style="display: inline-block; width: 100%; justify-content: flex-end; text-align: right;">
@@ -93,10 +93,10 @@
                     <tr>
                       <td class="flexible-content">
                         <p>By Amount Content</p>
-                        <div class="linngrid" id="byAmountGrid"
+                        <div class="linngrid" id="pwpByAmountGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
 
-                          <table style="width: 96%;">
+                          <table style="width: 98%;">
                             <tr>
                               <td>
                                 <div style="display: inline-block; width: 100%; justify-content: flex-end; text-align: right;">
@@ -114,7 +114,7 @@
                             <tr>
                               <td>
                                 <div style="display: flex; justify-content: flex-end">
-                                  <h4>Amount To Pay: {{ orderCurrency }} </h4><input type="number" ng-model="amountToPay"/>
+                                  <h4>Amount To Pay: {{ orderCurrency }} </h4><input class="amountInput" type="number" ng-model="amountToPay"/>
                                 </div>
                               </td>
                             </tr>
