--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -27,7 +27,7 @@
                   <lw-tab-header lw-tst="tab_ByItem" class="active">By Item</lw-tab-header>
                 </a></li>
               <li data-index="1" lw-tst="tab_ByAmount" class=""><a>
-                  <lw-tab-header lw-tst="tab_ByAmount" class="">By Amount</lw-tab-header>
+                  <lw-tab-header lw-tst="tab_ByAmount" class="" ng-click="showTabByAmount()">By Amount</lw-tab-header>
                 </a></li>
             </ul>
           </td>
