--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,8 +1,10 @@
 <div ng-controller="PayWithPayoneerView">
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/firebugx.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/jquery.event.drag-2.3.0.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/jquery.event.drop-2.3.0.min.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/jquery.event.drag-2.3.0.min.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/jquery.event.drop-2.3.0.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.core.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/slick.grid.js"></script>
@@ -13,8 +15,16 @@
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/plugins/slick.cellrangeselector.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/plugins/slick.cellselectionmodel.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slickgrid@2.4.21/plugins/slick.resizer.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/plugins/slick.cellselectionmodel.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/plugins/slick.cellselectionmodel.min.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/plugins/slick.cellselectionmodel.min.js"></script>
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/plugins/slick.cellselectionmodel.min.js"></script>
+
+  <div ng-if="ShowError">
+    <div class="alert alert-warning">
+      <strong>Error</strong> There was an error loading some of the data required for this page. Please try again later.
+    </div>
+  </div>
 
   <section>
     <table class="generic-module-layout tabset" lw-tst="tab_set" modern-layout="" tab-loaded="tabLoaded">
@@ -44,11 +54,12 @@
 
                         <div class="linngrid" id="pwpByItemGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
-                          
+
                         <table style="width: 99%;">
                           <tr>
                             <td>
-                              <div style="display: inline-block; width: 100%; justify-content: flex-end; text-align: right;">
+                              <div
+                                style="display: inline-block; width: 100%; justify-content: flex-end; text-align: right;">
                                 <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
                               </div>
                             </td>
@@ -96,43 +107,45 @@
                         <div class="linngrid" id="pwpByAmountGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
 
-                          <table style="width: 99%;">
-                            <tr>
-                              <td>
-                                <div style="display: inline-block; width: 100%; justify-content: flex-end; text-align: right;">
-                                  <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <div style="display: flex; justify-content: flex-end">
-                                  <h5>Outstanding: {{ orderCurrency }} {{ outstanding }} </h5>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <div style="display: flex; justify-content: flex-end">
-                                  <h4>Amount To Pay: {{ orderCurrency }} </h4><input class="amountInput" type="number" ng-model="amountToPay"/>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <div style="display: flex; justify-content: flex-end">
-                                  <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
-                                </div>
-                              </td>
-                            </tr>
-                            <tr>
-                              <td>
-                                <div style="display: flex; justify-content: flex-end">
-                                  <button class="btn btn-primary" ng-click="payByAmount()">Pay</button>
-                                </div>
-                              </td>
-                            </tr>
-                          </table>
+                        <table style="width: 99%;">
+                          <tr>
+                            <td>
+                              <div
+                                style="display: inline-block; width: 100%; justify-content: flex-end; text-align: right;">
+                                <h5>Paid: {{ orderCurrency }} {{ paid }} </h5>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div style="display: flex; justify-content: flex-end">
+                                <h5>Outstanding: {{ orderCurrency }} {{ outstanding }} </h5>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div style="display: flex; justify-content: flex-end">
+                                <h4>Amount To Pay: {{ orderCurrency }} </h4><input class="amountInput" type="number"
+                                  ng-model="amountToPay" />
+                              </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div style="display: flex; justify-content: flex-end">
+                                <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
+                              </div>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td>
+                              <div style="display: flex; justify-content: flex-end">
+                                <button class="btn btn-primary" ng-click="payByAmount()">Pay</button>
+                              </div>
+                            </td>
+                          </tr>
+                        </table>
 
                         <!-- <table>
                           <tr>
@@ -182,6 +195,6 @@
     </div>
 
   </div>
-  
+
 
 </div>
