--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -1,6 +1,6 @@
 <div ng-controller="PayWithPayoneerView">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/firebugx.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/firebugx.min.js"></script>
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/lib/jquery.event.drag-2.3.0.min.js"></script>
   <script
@@ -18,7 +18,7 @@
   <script
     src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/plugins/slick.cellselectionmodel.min.js"></script>
   <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/plugins/slick.cellselectionmodel.min.js"></script>
+    src="https://cdnjs.cloudflare.com/ajax/libs/6pac-slickgrid/2.4.21/plugins/slick.cellselectionmodel.min.js"></script> -->
 
   <div ng-if="ShowError">
     <div class="alert alert-warning">
