--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -81,7 +81,7 @@
                           <tr>
                             <td>
                               <div style="display: flex; justify-content: flex-end">
-                                <h5>Your balance is: {{ orderCurrency }} {{ paid }} </h5>
+                                <h5>Your balance is: {{ orderCurrency }} {{ balance }} </h5>
                               </div>
                             </td>
                           </tr>
