--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -107,7 +107,7 @@
                         <div class="linngrid" id="pwpByAmountGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
 
-                          
+
 
                         <table style="width: 99%;">
                           <tr>
@@ -189,7 +189,8 @@
   <div>
     <h2>Payment History</h2>
     <div ng-if="payments">
-      <h5>Payments</h5>
+      <div class="linngrid" id="pwpPaymentsGrid" style="width: 100%; height: 240px; outline: 0px; position: relative;">
+      </div>
 
     </div>
 
