--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -188,7 +188,7 @@
 
   <div>
     <h2>Payment History</h2>
-      <div class="linngrid" id="pwpPaymentsGrid" style="width: 100%; height: 200px; outline: 0px; position: relative;">
+      <div class="linngrid" id="pwpPaymentsGrid" style="width: 100%; min-height: 60px; outline: 0px; position: relative;">
       </div>
 
 
