--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -93,6 +93,33 @@
                             </td>
                           </tr>
                         </table>
+
+                        <table class="pull-right" style="min-width:300px;">
+                          <tbody><tr>
+                              <td class="totalsLabel">Subtotal:</td>
+                              <td style="text-align: right"> 808.25 UAH</td>
+                          </tr>
+                          <tr>
+                              <td class="totalsLabel">Tax:</td>
+                              <td style="text-align: right"> 0.00 UAH</td>
+                          </tr>
+                          <tr>
+                              <td class="totalsLabel"><b>Total: </b></td>
+                              <td style="text-align: right"><b> 808.25 UAH</b></td>
+                          </tr>
+
+                          <tr><td colspan="2" style="border-top: solid 1px #000"></td></tr>
+
+                          <tr>
+                              <td class="totalsLabel">Shipping: </td>
+                              <td style="text-align: right" title="">0.00 UAH</td>
+                          </tr>
+                          
+                      </tbody></table>
+
+
+
+
                       </td>
                     </tr>
                   </tbody>
