--- a/Views/simple/views/PayWithPayoneer.css
+++ b/Views/simple/views/PayWithPayoneer.css
@@ -1,6 +1,43 @@
 .amountInput {
     width: 80px;
-    margin-left: 12px;
+    height: 20px;
+    margin-left: 10px;
     text-align: center;
     font-size: 14px;
 }
+
+.slick-cell.editable {
+    z-index: 11;
+    overflow: visible;
+    background: white;
+  }
+
+  .slick-cell.input {
+      height: 18px;
+      width: 40px;
+  }
+  
+  .slick-cell:focus {
+    outline: none;
+  }
+  
+  .slick-reorder-proxy {
+    display: inline-block;
+    background: blue;
+    opacity: 0.15;
+    filter: alpha(opacity = 15);
+    cursor: move;
+  }
+  
+  .slick-reorder-guide {
+    display: inline-block;
+    height: 2px;
+    background: blue;
+    opacity: 0.7;
+    filter: alpha(opacity = 70);
+  }
+  
+  .slick-selection {
+    z-index: 10;
+    position: absolute;
+  }
