--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -60,7 +60,7 @@
 
                             <tr>
                               <td>
-                                <div style="display: flex; justify-content: flex-end">
+                                <div style="display: flex; justify-content: right">
                                   <button class="btn btn-primary" ng-click="payByItems()">Pay</button>
                                 </div>
                               </td>
@@ -108,7 +108,7 @@
 
                             <tr>
                               <td>
-                                <div style="display: flex; justify-content: flex-end">
+                                <div style="display: flex; justify-content: right">
                                   <button class="btn btn-primary" ng-click="payByAmount()">Pay</button>
                                 </div>
                               </td>
