--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -32,7 +32,7 @@
                       <td class="flexible-content">
                         <p>By Item Content</p>
 
-                        <div class="linngrid" id="pwpByItemGrid"
+                        <div class="linngrid slickgrid" id="pwpByItemGrid"
                           style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
 
                         <table class="pull-right" style="min-width:300px;">
@@ -60,7 +60,7 @@
 
                             <tr>
                               <td>
-                                <div style="float: right">
+                                <div style="float: right;margin-right: 5px;">
                                   <button class="btn btn-primary" ng-click="payByItems()">Pay</button>
                                 </div>
                               </td>
