--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -33,7 +33,7 @@
                         <p>By Item Content</p>
 
                         <div class="linngrid slickgrid" id="pwpByItemGrid"
-                          style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
+                          style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
 
                         <table class="pull-right" style="min-width:300px;">
                           <tbody>
@@ -59,8 +59,9 @@
                             </tr>
 
                             <tr>
+                              <td></td>
                               <td>
-                                <div style="float: right;margin-right: 5px;">
+                                <div style="display: flex; justify-content: right">
                                   <button class="btn btn-primary" ng-click="payByItems()">Pay</button>
                                 </div>
                               </td>
@@ -80,13 +81,13 @@
                       <td class="flexible-content">
                         <p>By Amount Content</p>
                         <div class="linngrid" id="pwpByAmountGrid"
-                          style="width: 100%; height: 240px; outline: 0px; position: relative;"></div>
+                          style="width: 100%; height: 200px; outline: 0px; position: relative;"></div>
 
                         <table class="pull-right" style="min-width:300px;">
                           <tbody>
                             <tr>
                               <td class="totalsLabel">Paid:</td>
-                              <td style="text-align: right"> {{ paid }} </td>
+                              <td style="text-align: right"> {{ paid }} {{ orderCurrency }}</td>
                             </tr>
                             <tr>
                               <td class="totalsLabel">Outstanding:</td>
@@ -139,7 +140,7 @@
 
   <div>
     <h2>Payment History</h2>
-    <div class="linngrid" id="pwpPaymentsGrid" style="width: 100%; height: 200px; outline: 0px; position: relative;">
+    <div class="linngrid" id="pwpPaymentsGrid" style="width: 100%; height: 140px; outline: 0px; position: relative;">
     </div>
 
     <div ng-if="!payments">
