--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -61,7 +61,7 @@
                             <tr>
                               <td></td>
                               <td>
-                                <div style="margin-right: 0px">
+                                <div style="float: right  !important ; width: 100%;">
                                   <button class="btn btn-primary" ng-click="payByItems()">Pay</button>
                                 </div>
                               </td>
