--- a/Views/simple/views/PayWithPayoneer.css
+++ b/Views/simple/views/PayWithPayoneer.css
@@ -8,7 +8,7 @@
 }
 
 .slick-cell.selected a {
-    color: #fff !important;
+    color: #000000 !important;
     text-shadow: none;
     border-right: 1px solid #93b1c9;
     background-color: #93b1c9
