--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -65,7 +65,7 @@
                               <td></td>
                               <td>
                                 <div class="pull-right">
-                                  <button class="btn btn-primary" ng-click="payByItems()">Pay</button>
+                                  <button class="btn btn-primary" ng-click="PayByItems()">Pay</button>
                                 </div>
                               </td>
                             </tr>
