--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -97,8 +97,8 @@
                             <tr>
                               <td class="totalsLabel"><b>Amount To Pay:</b></td>
                               <td style="text-align: right">
-                                <b><input class="amountInput" type="number" ng-model="amountToPay" /> {{ orderCurrency }}</b>
-                                <input type="text" class="input-small ng-valid ng-not-empty ng-dirty ng-valid-parse ng-touched" ng-decimal-number="" ng-decimal-number-allow-negatives="false" ng-model="amountToPay">
+                                <b><input type="text" class="input-small ng-valid ng-not-empty ng-dirty ng-valid-parse ng-touched" ng-decimal-number="" ng-decimal-number-allow-negatives="false" ng-model="amountToPay"> {{ orderCurrency }}</b>
+                                
                               </td>
                             </tr>
                             <tr>
