--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -76,7 +76,7 @@
                   </tbody>
                 </table>
               </div>
-              <div class="tab-pane position-relative" data-index="1">
+              <div ng-hide="hideTabByAmount" class="tab-pane position-relative" data-index="1">
                 <table class="generic-module-layout">
                   <tbody>
                     <tr>
