--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -138,7 +138,7 @@
 
       </lw-tab>
 
-      <lw-tab data-index="1">
+      <lw-tab ng-hide="hideTabByAmount" data-index="1">
 
       </lw-tab>
     </lw-tab-set>
