--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -149,7 +149,7 @@
     <div class="linngrid" id="pwpPaymentsGrid" style="width: 100%; height: 140px; outline: 0px; position: relative;">
     </div>
 
-    <div ng-if="!payments">
+    <div ng-if="!paymentsExist">
       <h5>No payments found for this PO.</h5>
     </div>
 
