--- a/Views/simple/views/PayWithPayoneer.html
+++ b/Views/simple/views/PayWithPayoneer.html
@@ -100,7 +100,7 @@
                                 <b><input type="text" class="input-small ng-valid ng-not-empty ng-dirty ng-valid-parse ng-touched" ng-decimal-number="" ng-decimal-number-allow-negatives="false" ng-model="amountToPay"> {{ orderCurrency }}</b>
                                 <form name="form">
                                   <label for="input">Input field:</label>
-                                  <input type="number" name="input" min="{{min}}" max="{{max}}" ng-model="input" required step="0.01" />
+                                  <input type="number" name="input" min="{{min}}" max="{{outstanding}}" ng-model="input" required step="0.01" />
                                   <div ng-messages="form.input.$error" style="color: #ff0000" role="alert" ng-if="form.input.$dirty">
                                     <div ng-message="required">This field is required</div>
                                     <div ng-message="min">This field must be at least {{min}}.</div>
@@ -125,7 +125,7 @@
                               <td></td>
                               <td>
                                 <div class="pull-right">
-                                  <button class="btn btn-primary" ng-click="payByAmount()">Pay</button>
+                                  <button class="btn btn-primary" ng-disabled="form.input.$dirty" ng-click="payByAmount()">Pay</button>
                                 </div>
                               </td>
                             </tr>
